## Process this file with automake to produce Makefile.in
noinst_LTLIBRARIES = liblapack.la

liblapack_la_SOURCES = dgecon.f \
		       dgelq2.f \
		       dgelqf.f \
		       dgels.f \
		       dgeqr2.f \
		       dgeqrf.f \
		       dgerq2.f \
		       dgerqf.f \
		       dgglse.f \
		       dggrqf.f \
		       dgetf2.f \
		       dgetrf.f \
		       dgetri.f \
		       dlabad.f \
		       dlacon.f \
		       dlamch.f \
		       dlange.f \
		       dlapy2.f \
		       dlarfb.f \
		       dlarf.f \
		       dlarfg.f \
		       dlarft.f \
		       dlascl.f \
		       dlaset.f \
		       dlassq.f \
		       dlaswp.f \
		       dlatrs.f \
		       dorm2r.f \
		       dorml2.f \
		       dormlq.f \
		       dormqr.f \
		       dormrq.f \
		       dormr2.f \
		       drscl.f \
		       dtrti2.f \
		       dtrtri.f \
		       ieeeck.f \
		       ilaenv.f \
		       lsame.f \
		       xerbla.f

MAINTAINERCLEANFILES = Makefile.in
